Edits titles and legends for all charts

--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -11,6 +11,7 @@ output:
 source(here::here("code", "00_setup-environment.R"))
 library(crosstalk) # for drop down menus
 library(phsstyles)
+library(htmltools)
 
 # Write numbers with thousands separator
 knit_hooks$set(inline = function(x){
